recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:9: error: ')' expected but '}' found.
}
^FourSquare:10: error: ';' expected but ']' found.
]
^